# dxwr

./: Cargo.toml  README.md
examples/: clear_view.rs  pipeline_state_stream.rs  raytracing_triangle.rs  triangle.rs
examples/raytracing_triangle/: raytracing.cso  raytracing.hlsl
examples/triangle/: triangle.ps  triangle.vs  trinagle.hlsl
src/: adapter.rs  command_allocator.rs  command_list.rs  command_list_type.rs  command_queue.rs  debug.rs  descriptor_heap.rs  device.rs  dxc.rs  features.rs  fence.rs  lib.rs  pipeline_state.rs  prelude.rs  raytracing.rs  reflection.rs  resource_barriers.rs  resources.rs  root_signature.rs  state_object.rs  swap_chain.rs  utility.rs
