[package]
name = "dxwr"
version = "0.4.0"
edition = "2024"
description = "Direct3D12 and DXGI wrapper library"
repository = "https://github.com/btanno/dxwr"
documentation = "https://docs.rs/dxwr"
license = "MIT"
readme = "README.md"
categories = ["graphics"]
keywords = ["direct3d", "dxgi", "windows"]

[dependencies]

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Dxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Threading",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_Debug",
]

[dev-dependencies]
anyhow = "1.0"
wiard = "0.6"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
